src/App.css
/* ... */
@media(max-width:1200px) {
  .review-slider-container {
    align-items: center;
  }
  .user-reviews-title {
    margin-top: 3rem;
    text-align: center;
  }
  .large-review {
    font-size: 17px;
  }
}

@media(max-width:1080px) {
  .large-review {
    font-size: 15px;
  }
  .profile-icon {
    height: 60px;
    width: 60px;
  }
}

@media(max-width:880px) {
  .large-review {
    height: 600px;
    padding: 4rem;
  }
}
@media(max-width:700px) {
  .large-review {
    line-height: 28px;
  }
  .review {
    min-width: 400px;
  }

  @media(max-width:600px) {
    .large-review {
      line-height: 25px;
      font-size: 13px;
    }
    
  }

  @media(max-width:520px) {
    .large-review {
      line-height: 22px;
      font-size: 13px;
      padding:4.5rem 2rem;
    }
    .review-slider-container {
      margin-top: 10rem;
    }
  }

  @media(max-width:500px) {
    .large-review {
      height: 600px;
    }
  }

@media(max-width:410px) {
  .review {
    min-width: 330px;
  }
  .large-review {
    padding: 4.5rem 1.5rem;
  }
}

@media(max-width:380px) {
  .large-review {
    padding: 4.5rem 1rem;
  }
}

@media(max-width:350px) {
  .large-review {
    padding: 4.5rem .5rem;
    height: 650px;
  }
  .review-slider-container {
    margin-top: 15rem;
  }
}

}
.newsletter-section {
  margin-bottom: 5rem;
}

.newsletter-title {
  font-family: Inter;
  font-size: 64px;
  font-weight: 700;
  line-height: 77.45px;
  text-align: center;

}

.newsletter-subtitle {
  font-family: Inter;
  font-size: 20px;
  font-weight: 300;
  line-height: 24.2px;
  text-align: center;
  padding: 1rem 30em;
}

.newsletter-input-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  margin-left: 5rem;
  margin-top: 1rem;
}

.newsletter-input {
  border: 2px solid rgba(0, 0, 0, 1);
  width: 616px; /* Adjust width as needed */
  height: 63px; /* Adjust height as needed */
  border-radius: 14px;
  padding: 0 10px; /* Add some padding */
  box-sizing: border-box; /* Include padding in width */
}

.newsletter-button-container {
  justify-content: center;
  display: flex;
  text-align: center;

}

@media (max-width:1500px) {
  .newsletter-title {
    font-size: 45px;
  }
  .newsletter-subtitle {
    padding: 1rem 0rem;
  }
  .newsletter-input-container {
    margin-left: 2rem;
    margin-right: 2rem;
  }
}

@media (max-width:410px) {
  .newsletter-input {
    width: 10rem;
  }

  .newsletter-button-container {
    width: 8rem;
  }
}

.text-container-2nd-page {
  flex: 1;
  max-width: 100%;
  margin-left: -5rem;
}


.search-container {
  display: flex;
  justify-content: center;
  margin-top: 70px;
  width: 100%;
  z-index: 10;
}

.search-input {
  width: 100%;  /* Use 100% width to make it dynamic */
  max-width: 800px; /* Optional: Limit maximum width */
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 1.5rem;
  margin-right: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  transition: box-shadow 0.3s;
}

.search-input:focus {
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
}


.search-button {
  padding: 10px 15px;
  border: none;
  border-radius: 1.5rem;
  background-color: white;
  color: var(--bidi-primary-color);
  cursor: pointer;
  width: 300px;
  font-weight: bold;
  border: 3px solid var(--bidi-primary-color);
  z-index: 10;
}

.search-button:hover {
  background-color: var(--bidi-primary-color);
  color:white;
  z-index: 10;
} 

.search-button-secondary {
  padding: 10px 15px;
  border: none;
  border-radius: 1.5rem;
  background-color: var(--bidi-primary-color);
  color: white;
  cursor: pointer;
  width: 300px;
  font-weight: bold;
  border: 3px solid var(--bidi-primary-color)
}

.search-button-secondary:hover {
  background-color: white;
  color:var(--bidi-primary-color);
} 

.description-button {
  background-color: transparent;
  border: none;
  color: #007bff;
  padding: 0;
  font-size: 14px;
  cursor: pointer;
  text-decoration: underline;
  display: inline; /* Inline with the text */
}

.description-button:hover {
  color: #0056b3;
  text-decoration: none;
}

/* RequestDisplay.css */

/* Base styles for request display */
.request-display {
  background-color: #ffffff;
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  margin:8px;
  padding: 16px;
  max-width: 100%;
  overflow-wrap: break-word; /* Ensure long words break properly */
  text-align: center; /* Center-align all text within the card */
}

@media (max-width:500px) {
  .request-display {
    max-width: 400px;
  }
}

@media (max-width:430px) {
  .request-display {
    max-width: 300px;
  }
}

/* Adjust content to stack vertically */
.request-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap:12px;
}

/* Title styling */
.request-title {
  font-size: 1.5em;
  margin-bottom: 10px;
  color: #333;
  word-wrap: break-word; /* Ensure long words break */
  color: #000;
  text-align: center;
  font-family: Roboto;
  font-size: 20px;
  font-style: normal;
  font-weight: 700;
}

/* Styling for other elements */
.request-location,
.request-category,
.request-description,
.price-range,
.request-date,
.request-comments {
  font-size: 1em;
  margin-bottom: 10px;
  color: #555;
  text-align: center; /* Center-align text */
}

/* Bold labels */
.request-location strong,
.request-category strong,
.request-description strong,
.request-date strong,
.price-range strong, 
.request-comments strong {
  color: #000;
  font-weight: bold;
}

/* Bid button styling */
.bid-button {
  display: inline-block; /* Change to inline-block to avoid taking the full width */
  width: auto; /* Adjust width to auto */
  max-width: 80%; /* Set a maximum width to prevent stretching */
  margin: 10px auto 0; /* Center the button and add space above */
  padding: 10px 20px; /* Add padding for better appearance */
  text-align: center; /* Center the text inside the button */
}
/* ... */

